app/crates/ironstate-aggregate/tests/ui/instant_field.rs
use std::time::Instant;

#[derive(ironstate_aggregate::StableHash)]
struct Session {
    id: u64,
    started: Instant,
}

fn main() {}
